--- a/app/assets/stylesheets/products.scss
+++ b/app/assets/stylesheets/products.scss
@@ -51,6 +51,18 @@ main section.categories-show {
         font-size: 0.8em;
       }
 
+      aside.sold-out {
+        position: absolute;
+        color: white;
+        top: 0;
+        left: 0;
+        padding: 10px;
+        background-color: #DA8E8D;
+        border-top-left-radius: 4px;
+        border-bottom-right-radius: 20px;
+        font-size: 1em;
+      }
+
       &:hover {
 
         border-color: #999;
