added users functionality

--- a/app/views/admin/categories/index.html.erb
+++ b/app/views/admin/categories/index.html.erb
@@ -14,8 +14,7 @@
        <thead>
          <tr>
            <th>ID</th>
-           <th colspan="2">Category</th>
-           <th>Created At</th>
+           <th>Category</th>
          </tr>
        </thead>
        <tbody>
