--- a/app/views/layouts/_top_nav.html.erb
+++ b/app/views/layouts/_top_nav.html.erb
@@ -44,6 +44,27 @@
             <%= fa_icon "shopping-cart" %> My Cart (<%= cart.size %>)
           <% end %>
         </li>
+        <% if current_user %>
+           <li>
+             <a>Welcome, <%= current_user.name %>!</a>
+           </li>
+           <li>
+            <%= link_to '/logout' do %>
+               Logout
+             <% end %>
+           </li>
+           <% else %>
+           <li>
+             <%= link_to '/login' do %>
+               Login
+             <% end %>
+           </li>
+           <li>
+             <%= link_to '/signup' do %>
+               Signup
+             <% end %>
+           </li>
+           <% end %>
       </ul>
     </div>
   </div>
