--- a/app/views/orders/show.html.erb
+++ b/app/views/orders/show.html.erb
@@ -8,6 +8,49 @@
     <h4>Thank you for your order!</h4>
   </div>
 
+<div class="panel panel-default items">
+    <table class="table table-bordered">
+      <thead>
+        <tr>
+          <th colspan="2">Product</th>
+          <th>Description</th>
+          <th>Email</th>
+        </tr>
+      </thead>
+      <tbody>
+      <% @items.each do |item| %>
+        <td>
+        <img src= <%= item.product.image.tiny%> > </img>
+        </td>
+        <td>
+        <%= item.product.name %>
+        </td>
+        <td>
+        <%= item.product.description%>
+        </td>
+        <td>
+        <% if current_user %>
+          <%= current_user.email %>
+          <% else %>
+          <%= @order.email%>
+          <% end %>
+        </td>
+      </tbody>
+      <% end %>
+      <tfoot>
+        <tr>
+          <th colspan="3">
+            TOTAL:
+          </th>
+          <th>
+            $<%= @order.total_cents / 100%>
+          </th>
+        </tr>
+      </tfoot>
+    </table>
+  </div>
+  
+
   <%= link_to "Continue Shopping", root_path, class: 'btn btn-lg btn-primary' %>
 
 </section>
