--- a/app/views/user_mailer/welcome_email.html.erb
+++ b/app/views/user_mailer/welcome_email.html.erb
@@ -1,13 +1,3 @@
-<section class="orders-show">
-
-  <header class="page-header">
-    <h1>Order #<%= @order.id %></h1>
-  </header>
-
-  <div class="order-summary jumbotron">
-    <h4>Thank you for your order!</h4>
-  </div>
-
 <div class="panel panel-default items">
     <table class="table table-bordered">
       <thead>
@@ -29,8 +19,8 @@
         <%= item.product.description%>
         </td>
         <td>
-        <% if current_user %>
-          <%= current_user.email %>
+        <% if @email %>
+          <%= @email %>
           <% else %>
           <%= @order.email%>
           <% end %>
@@ -49,8 +39,3 @@
       </tfoot>
     </table>
   </div>
-  
-
-  <%= link_to "Continue Shopping", root_path, class: 'btn btn-lg btn-primary' %>
-
-</section>
