--- a/app/views/carts/show.html.erb
+++ b/app/views/carts/show.html.erb
@@ -3,7 +3,7 @@
   <header class="page-header">
     <h1>My Cart</h1>
   </header>
-
+  <% if !cart.blank? %>
   <div class="panel panel-default items">
     <table class="table table-bordered">
       <thead>
@@ -49,5 +49,9 @@
       <% end %>
     </div>
   </div>
-
+<% else %>
+<p>Your cart is empty! Please go back to home page
+  <%= link_to 'Home', :root %>
+<%end%>
+  </p>
 </section>
